Actualización de nueva funcion de logout

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -63,6 +63,10 @@
         <div class="navbar-icons">
           <a><i class="bi bi-heart"></i></a>
           <a><i class="bi bi-cart"></i></a>
+
+          <a (click)="onLogout()" class="logout-btn" title="Cerrar Sesión" style="cursor: pointer; margin-left: 15px; color: #dc3545;">
+            <i class="bi bi-box-arrow-right" style="font-size: 1.3rem;"></i>
+          </a>
         </div>
       </div>
     </div>
