Co-authored-by: MIYERS98 <MIYERS98@users.noreply.github.com>

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -10,6 +10,7 @@
                 </div>
                 <!--   caracteristicas   -->
                 <div class="product-info">
+                    <p>Que rollo cara de pollo</p>
                     <h3 class="product-name">{{ product.nombre }}</h3>
                     <p class="product-description">{{ product.descripcion }}</p>
                     <div class="product-price">${{ product.precio }}</div>
